--- a/chips/switch/MC33996.md
+++ b/chips/switch/MC33996.md
@@ -6,12 +6,12 @@ MC33996は16チャンネル出力の[ローサイドスイッチ](https://www.ro
 ラズパイでON/OFF弁を制御するために使う．12V-バルブ-スイッチ-GNDの順でつながっており，スイッチONだと12Vとつながってバルブが駆動せず，スイッチOFFだとGNDとつながってバルブが駆動する．
 SPI（Serial Peripheral Interface）でマイコンと通信する．通信は24ビットで，3.3Vと5.0VのCMOSロジックレベルに対応．
 複数の出力を同じデューティサイクルでパルス幅変調するために，PWM（Pulse Width Modulation）制御入力用意されている．
-リセット機能有．電源の過電圧（27.5~35V）防止機能有．
+リセット機能有．電源の過電圧（27.5\~35V）防止機能有．
 
 ## SPI
 ・SPImodeは1(CPOL=0, CPHA=1)．最大6MHzのクロック周波数．
 ・SPIの制御コマンド
-    MSB first．23~18bitで指令内容を決定，15~0bitは各指令において当該チャンネルがONかOFFかを決める．
+    MSB first．23\~18bitで指令内容を決定，15~0bitは各指令において当該チャンネルがONかOFFかを決める．
     ・ON/OFF制御：000000|××|
     ・PWM制御：000100|××|  
     ・リセット：000110|××|後半16pinも×（入力内容問わず）
