--- a/chips/switch/MC33996.md
+++ b/chips/switch/MC33996.md
@@ -11,7 +11,7 @@ SPI（Serial Peripheral Interface）でマイコンと通信する．通信は24
 ## SPI
 SPImodeは1(CPOL=0, CPHA=1)．最大6MHzのクロック周波数． 
 
-*SPIの制御コマンド : MSB first．23\~18bitで指令内容を決定，15~0bitは各指令において当該チャンネルがONかOFFかを決める．  
-     *ON/OFF制御：000000|××|  
-     *PWM制御：000100|××|  
-     *リセット：000110|××|後半16pinも×（入力内容問わず）
+-SPIの制御コマンド : MSB first．23\~18bitで指令内容を決定，15~0bitは各指令において当該チャンネルがONかOFFかを決める．
+     -ON/OFF制御：000000|××|
+     -PWM制御：000100|××|
+     -リセット：000110|××|後半16pinも×（入力内容問わず）
