--- a/chips/switch/MC33996.md
+++ b/chips/switch/MC33996.md
@@ -3,7 +3,7 @@ This is translated datasheat for JP guys.
 The original datasheat is [here](https://www.mouser.jp/datasheet/2/302/MC33996-1126506.pdf).  
 
 MC33996は16チャンネル出力の[ローサイドスイッチ](https://www.rohm.co.jp/electronics-basics/switch/switch_what2)．
-ラズパイでON/OFF弁を制御するために使う．12V-バルブ-スイッチ-GNDの順でつながっており，スイッチONだと12Vとつながってバルブが駆動せず，スイッチOFFだとGNDとつながってバルブが駆動する．
+ラズパイでON/OFF弁を制御するために使う．12V-バルブ-スイッチ-GNDの順でつなげること．スイッチONだと12Vとつながってバルブが駆動せず，スイッチOFFだとGNDとつながってバルブが駆動する．
 SPI（Serial Peripheral Interface）でマイコンと通信する．通信は24ビットで，3.3Vと5.0VのCMOSロジックレベルに対応．
 複数の出力を同じデューティサイクルでパルス幅変調するために，PWM（Pulse Width Modulation）制御入力用意されている．
 リセット機能有．電源の過電圧（27.5\~35V）防止機能有．
